Se quito el color morado del span de ambientes

--- a/html/AutoTSW.html
+++ b/html/AutoTSW.html
@@ -112,7 +112,7 @@
             <div class="col-md-3">
                 <div class="centrar">
                     <div class="servicios">
-                        <span   id="gestionAmb"  style="color: purple" class="fa-5x fa fa-university"></span>
+                        <span class="fa-5x fa fa-university"></span>
                     </div>
                 </div>
                 <div class="parrafo">
