--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -90,14 +90,14 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/imginicio/hero-seattle.jpg" class="img-responsive" alt="">
+                    <img src="img/imginicio/hero-japan.jpg" class="img-responsive" alt="">
                     <div class="carousel-caption hidden-xs hidden-sm">
                         <h3>Este es nuestro slide #2</h3>
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/imginicio/hero-pikachu.jpg" class="img-responsive" alt="">
+                    <img src="img/imginicio/hero-london.jpg" class="img-responsive" alt="">
                     <div class="carousel-caption" hidden-xs hidden-sm>
                         <h3>Este es nuestro slide #3</h3>
                         <p>Lorem ipsum dolor sit amet</p>
